--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "license": "ISC",
   "devDependencies": {
     "code": "^2.1.0",
-    "lodash": "^3.10.1"
+    "lodash": "^3.10.1",
+    "phpjs": "^1.3.2"
   },
   "dependencies": {
     "lodash": "^3.10.1"
