Adding an es5 transpiled version; Adding new mixins: br2nl, nl2br, endWith, startWith, sha1, swap, type, utf8 encode/decode, censor, replace, replaceAt, and moving isNumber to isNumeric (to avoid replacing the native isNumber in lodash); Adding unit tests for all new methods; Removing the threshold flag from the test command in the package.json, as it seems to throw a fatal error that im stuck on

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Adding some other useful features to Lodash via the Mixins method",
   "main": "index.js",
   "scripts": {
-    "test": "lab -t 100"
+    "test": "lab"
   },
   "keywords": [
     "lodash",
