--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   "license": "ISC",
   "devDependencies": {
     "code": "^2.1.0",
-    "lodash": "^3.10.1",
-    "phpjs": "^1.3.2"
+    "phpjs": "^1.3.2",
+    "lodash": "^4.0.0"
   },
   "dependencies": {
-    "lodash": "^3.10.1"
+    "lodash": "^4.0.0"
   }
 }
