Updating readme, adding some functions

--- a/package.json
+++ b/package.json
@@ -17,10 +17,16 @@
   "author": "Justin Hyland",
   "license": "ISC",
   "devDependencies": {
+    "babel-preset-es2015": "^6.16.0",
     "code": "^2.1.0",
-    "lodash": "^4.0.0"
+    "del": "^2.2.2",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "lodash": "^4.0.0",
+    "yargs": "^6.0.0"
   },
   "dependencies": {
+    "babel-preset-es2015": "^6.16.0",
     "lodash": "^4.0.0"
   }
 }
